force-app/main/default/objects/QCC_Curfew_Port__c/QCC_Curfew_Port__c.object-meta.xml
<CustomObject>
    <label>Curfew Port</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>QCC Curfew Port Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Curfew Ports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>