force-app/main/default/objects/QCC_Curfew_Port__c/fields/QCC_End_Time__c.field-meta.xml
<CustomField>
    <fullName>QCC_End_Time__c</fullName>
    <description>End Time of the curfew</description>
    <inlineHelpText>End Time of the curfew</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>