force-app/main/default/objects/QCC_Curfew_Port__c/fields/QCC_Port__c.field-meta.xml
<CustomField>
    <fullName>QCC_Port__c</fullName>
    <description>The airport code of the port</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The airport code of the port</inlineHelpText>
    <label>Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>