force-app/main/default/objects/QCC_Curfew_Port__c/fields/QCC_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>QCC_Start_Time__c</fullName>
    <description>Start Time of the curfew</description>
    <inlineHelpText>Start Time of the curfew</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>