force-app/main/default/objects/QCC_Curfew_Port__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QCC_Port__c</columns>
    <columns>QCC_Start_Time__c</columns>
    <columns>QCC_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Curfew Ports</label>
</ListView>